fix override visibility with display: none to remove element from layout

--- a/common/common.scss
+++ b/common/common.scss
@@ -41,3 +41,7 @@
 .discourse-tags .discourse-tags__tag-separator:last-of-type {
   display: none !important;
 }
+
+body.category-wishlist:not(.tags-page) .topic-list-item.tag-Released {
+  display: none !important;
+}
